--- a/css/configuraciones.css
+++ b/css/configuraciones.css
@@ -6,5 +6,12 @@
 html{
     font-size: 10px;
     font-family: 'Poppins', sans-serif;
-    font-family: 'Braah One', sans-serif;
+    /*font-family: 'Braah One', sans-serif;*/
+    font-family: 'Cherry Bomb One', cursive;
+}
+:root{
+    --color1--: #FFC3A1;
+    --color2--: #F49D1A;
+    --color3--: #FFE15D;
+    --color4--: #B01E68;
 }
