--- a/css/footer.css
+++ b/css/footer.css
@@ -1,23 +1,30 @@
 footer{
-    background-color: bisque;
-    height: 12rem;
+    background-color:var(--color1--);
+    height: 35%;
     width: 100%;
 
-    margin-top: 5rem;
+    
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20%;
+  
+}
 
+p{
+    margin-top: 3rem;
+    font-size: 3rem;
+    margin-left: 3rem;
+}
+.Estructura{
     display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 .redes{
     display: flex;
     flex-direction: column;
     
 }
-.redes p{
-    font-size: 2rem;
-}
-
 .red{
     display: flex;
     align-items: center;
@@ -30,16 +37,20 @@ footer{
 }
 .red a{
     text-decoration: none;
+    color: rgb(209, 81, 35);
+    font-size: 1.5rem;
     margin-left: 1rem;
 }
 .info{
     display: flex;
     flex-direction: column;
-
+    
     
 }
 .info a{
     text-decoration: none;
+    color: rgb(209, 81, 35);
+    font-size: 1.4rem;
 }
 .compra{
     display: flex;
@@ -51,5 +62,7 @@ footer{
 }
 .compra a {
    text-decoration: none;
+   color: rgb(209, 81, 35);
+   font-size: 1.5rem;
     margin-left: 1rem;
 }
