--- a/css/header.css
+++ b/css/header.css
@@ -9,10 +9,9 @@ header{
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-   
-    background-color: bisque;
+    justify-content: space-around;
 
+    background-color:var(--color1--);
 
 }
 .menu li{
@@ -40,15 +39,27 @@ header{
     width: auto;
     height: 3rem;
 }
+.encabezado p{
+    
+    margin-bottom: 2rem;
+    font-size: 200%;
+    margin-left: 1rem;
+}
 .encabezado button{
-    height: 2rem;
-    border-style: none;
+    height: 2.3rem;
+    width: 10rem;
     padding-top: 0.2rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.6rem;
     padding-left: 0.4rem;
     padding-right: 0.4rem;
+
+    border-style: none;
+    border-radius: 0.5rem;
+
     font-family: 'Poppins';
     font-weight: 600;
+
+    background-color: var(--color3--);
     
 }
 .encabezado .buscar{
@@ -56,15 +67,21 @@ header{
     height: 1.3rem;
     background-color: coral;
     border-bottom: 2px solid rgb(75, 25, 7);
-    width: 35%;
+    width: 75%;
     outline: none;
     
 }
+.search{
+    display: flex;
+    align-items: center;
+    width: 40%;
+}
 .our{
-    font-size: 5.4rem;
+    font-size: 5.3rem;
     font-weight: 800;
     text-align: center;
     margin-top: 2rem;
-    font-family: 'Braah One', sans-serif;
+    /*font-family: 'Braah One', sans-serif;*/
+    color: var(--color4--);
 
 }
