--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 header{
     width: 100%;
-    background-color: coral;
+    background-color: var(--color4--);
 }
 .menu{
     /*width: 100%;*/
@@ -10,18 +10,35 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
-    background-color:var(--color1--);
+    background-color: var(--color1--);
 
 }
 .menu li{
     font-size: 1.5rem;
     font-weight: 700;
     padding: 1rem 1rem;
-    color: rgb(16, 31, 4);
+    margin-top: 1rem;
     font-family: 'Poppins', sans-serif;
 
+    background-color: aquamarine;
+    border-radius: 2rem;
 }
+.menu .uno{
+    background-color: var(--color6--);
+}
+.menu .dos{
+    background-color: var(--color2--);
+}
+.menu .tres{
+    background-color: var(--color7--);
+}
+.menu .cuatro{
+    background-color: var(--color8--);
+}
+.menu .cinco{
+    background-color: var(--color9--);
+}
+
 .encabezado{
     display: flex;
     flex-wrap: wrap;
@@ -33,11 +50,11 @@ header{
 }
 .encabezado .logo{
     width: auto;
-    height: 4rem;
+    height: 6rem;
 }
 .encabezado .carrito{
     width: auto;
-    height: 3rem;
+    height: 4rem;
 }
 .encabezado p{
     
@@ -46,27 +63,33 @@ header{
     margin-left: 1rem;
 }
 .encabezado button{
-    height: 2.3rem;
+    height: 2.5rem;
     width: 10rem;
-    padding-top: 0.2rem;
+
+    padding-top: 0.1rem;
+   /* padding-top: 0.2rem;
     padding-bottom: 0.6rem;
     padding-left: 0.4rem;
-    padding-right: 0.4rem;
+    padding-right: 0.4rem;*/
 
     border-style: none;
     border-radius: 0.5rem;
-
+    border: solid white 2px;
+    
     font-family: 'Poppins';
     font-weight: 600;
 
-    background-color: var(--color3--);
+    
+    background-color: var(--color4--);
+
+    color: var(--color1--);
     
 }
 .encabezado .buscar{
     border-style: none;
     height: 1.3rem;
-    background-color: coral;
-    border-bottom: 2px solid rgb(75, 25, 7);
+    background-color: var(--color4--);
+    border-bottom: 2px solid var(--color1--);
     width: 75%;
     outline: none;
     
@@ -75,13 +98,25 @@ header{
     display: flex;
     align-items: center;
     width: 40%;
+
+}
+.search p{
+    color: var(--color1--);
+    margin-right: 1rem;
+    font-size: 3rem;
 }
 .our{
-    font-size: 5.3rem;
+    font-size: 5.2rem;
     font-weight: 800;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 5rem;
+    font-family: 'Poppins', sans-serif;
     /*font-family: 'Braah One', sans-serif;*/
-    color: var(--color4--);
+    color: var(--color4--) ;
+    /*color: var(--color4--);*/
 
+}
+.menu a{
+    text-decoration: none;
+    color: var(--color1--);
 }
