--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer{
     background-color:var(--color4--);
-    height: 35%;
+    height: 20rem;
     width: 100%;
 
     
@@ -85,4 +85,63 @@ p{
    font-family: 'Poppins', sans-serif;
 
    margin-left: 1rem;
+}
+
+
+
+
+.menu_flotante{
+    background-color: var(--color4--);
+    width: 100%;
+    height: 9rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    
+    /*
+    position: fixed;
+    z-index: 2000;
+    bottom: 0;*/
+}
+.menu_flotante img{
+    height: 4.5rem;
+}
+.minibox a{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+    align-items: center;
+    height: 5rem;
+}
+
+.menu_flotante button{
+    height: 2.5rem;
+    width: 10rem;
+
+    padding-top: 0.1rem;
+   /* padding-top: 0.2rem;
+    padding-bottom: 0.6rem;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;*/
+
+    border-style: none;
+    border-radius: 0.5rem;
+    border: solid white 2px;
+    
+    font-family: 'Poppins';
+    font-weight: 600;
+
+    
+    background-color: var(--color4--);
+
+    color: var(--color1--);
+    
+}
+.text{
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 0;
+    margin-top: 1rem;
 }
