--- a/css/header.css
+++ b/css/header.css
@@ -62,7 +62,7 @@ header{
     font-size: 200%;
     margin-left: 1rem;
 }
-.encabezado button{
+/*.encabezado button{
     height: 2.5rem;
     width: 10rem;
 
@@ -72,7 +72,7 @@ header{
     padding-left: 0.4rem;
     padding-right: 0.4rem;*/
 
-    border-style: none;
+  /*  border-style: none;
     border-radius: 0.5rem;
     border: solid white 2px;
     
@@ -85,6 +85,7 @@ header{
     color: var(--color1--);
     
 }
+*/
 .encabezado .buscar{
     border-style: none;
     height: 1.3rem;
@@ -122,4 +123,8 @@ header{
 }
 .inicio img{
     height: 4rem;
+}
+
+.filtro{
+    display: none;
 }
