--- a/categorias/categorias.css
+++ b/categorias/categorias.css
@@ -8,9 +8,69 @@
     display: inline-block;
     text-align: center;
 
+    height: 38rem;
+    width: 24rem;
+    margin-top: 7rem;
+
+    background-color: aqua;
+}
+.C a{
+    text-decoration: none;
+    display: block;
+    text-align: center; 
+    padding-top: 0.5rem;
+    height: 5rem;
+    margin-top: -3%;
+    /*margin-top: -4%;
+    padding-top: 1rem;*/
+
+    font-size: 2.5rem;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+
+    color: var(--color1--);
+    background: var(--color4--);
+}
+.C .articulo{
+    margin-top: 2rem;
     height: 20rem;
     width: 20rem;
-    margin-top: 7rem;
+}
+.detalle_info{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    text-align: start;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1.5rem;
+}
+
+.clave{
+    font-size: 2rem;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+}
+.money{
+    font-size: 2.5rem;
+    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
+    color: var(--color4--);
+    margin-right: 2.4rem;
+
+}
+.corazon {
+    height: 3rem;
+    width: 3rem;
+}
+.orden{
+    height: 13rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 .categorias a{
     text-decoration: none;
@@ -29,16 +89,21 @@
     color: var(--color1--);
     background: var(--color4--);
 }
+
+
+
 .categorias img{
     height: 20rem;
     width: 20rem;
     filter: brightness(50%);
 }
+
+/***************************OCASIÓN IDEAL********************/
 .galeria2 h1{
     font-size: 400%;
     font-weight: 800;
     text-align: center;
-    margin-top: 8rem;
+    margin-top: 1.5rem;
     font-family: 'Poppins', sans-serif;
     color: var(--color4--);
 }
@@ -54,6 +119,19 @@
     font-family: 'Poppins', sans-serif;
     color: var(--color1--);
 
+}
+.D{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+
+    height: 20rem;
+    width: 24rem;
+    margin-top: 7rem;
+
+    box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+    -webkit-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+    -moz-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
 }
 
 /******* CSS CATEGORIASS*************************************/
@@ -83,30 +161,54 @@
     flex-wrap: wrap;
     justify-content: space-around; 
 }
-.C a{
-    text-decoration: none;
+
+
+/*.corazon{
+   
+    transform:rotate(45deg);
+    animation:beat 1s infinite alternate ease-in-out;
+  }
+  @keyframes beat{
+    to{
+      transform: rotate(45deg) scale(1.05);
+    }
+  }
+  
+  .heart{
+    --size: 15px;
+    --color: var(--color4--);
+    transform:rotate(45deg);
+    
+  }
+  @keyframes beat{
+    to{
+      transform: rotate(45deg) scale(1.05);
+    }
+  }
+  
+  .heart,
+  .heart::before,
+  .heart::after{
+      width: var(--size);
+      height: var(--size);
+      background:var(--color);
+  }
+  .heart::before,
+  .heart::after{
+    content:'';
     display: block;
-    text-align: center; 
-    padding-top: 0.5rem;
-    height: 5rem;
-    margin-top: -3%;
-    /*margin-top: -4%;
-    padding-top: 1rem;*/
+    border-radius:50%;
+  }
+  .heart::before{
+    margin-top: calc(var(--size)*-.5);
+   
+  }
+  .heart::after{
+    margin-top: calc(var(--size)* -0.5);
+    margin-left: calc(var(--size)* -0.5);
+  }
+  */
 
-    font-size: 2.5rem;
-    font-weight: 600;
-    font-family: 'Poppins', sans-serif;
-
-    color: var(--color1--);
-    background: var(--color4--);
-}
-.C img{
-    height: 20rem;
-    width: 20rem;
-}
-.clave{
-    display: none;
-}
 .filtro{
     display: none;
 }
