--- a/css/configuraciones.css
+++ b/css/configuraciones.css
@@ -8,6 +8,7 @@ html{
     font-family: 'Poppins', sans-serif;
     font-family: 'Braah One', sans-serif;
     /*font-family: 'Cherry Bomb One', cursive;*/
+    background-color: #EEEEEE;
 }
 :root{
     --color1--: #FFFFFF;
@@ -19,7 +20,5 @@ html{
     --color7--: #34afe4;
     --color8--: #ca37ff;
     --color9--: #3176ff;
-}
-.filtro{
-    display: none;
+    --color10--: #EEEEEE;
 }
