--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: var(--color1--);
+    background-color: var(--color10--);
 
 }
 .menu li{
@@ -62,30 +62,7 @@ header{
     font-size: 200%;
     margin-left: 1rem;
 }
-/*.encabezado button{
-    height: 2.5rem;
-    width: 10rem;
 
-    padding-top: 0.1rem;
-   /* padding-top: 0.2rem;
-    padding-bottom: 0.6rem;
-    padding-left: 0.4rem;
-    padding-right: 0.4rem;*/
-
-  /*  border-style: none;
-    border-radius: 0.5rem;
-    border: solid white 2px;
-    
-    font-family: 'Poppins';
-    font-weight: 600;
-
-    
-    background-color: var(--color4--);
-
-    color: var(--color1--);
-    
-}
-*/
 .encabezado .buscar{
     border-style: none;
     height: 1.3rem;
@@ -106,8 +83,85 @@ header{
     margin-right: 1rem;
     font-size: 3rem;
 }
+
+
+.menu_flotante{
+    background-color: var(--color4--);
+    width: 100%;
+    height: 9rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    
+    /*
+    position: fixed;
+    z-index: 2000;
+    bottom: 0;*/
+}
+.menu_flotante img{
+    height: 4.5rem;
+}
+
+
+.menu_flotante button{
+    height: 2.5rem;
+    width: 10rem;
+
+    padding-top: 0.1rem;
+ 
+
+    border-style: none;
+    border-radius: 0.5rem;
+    border: solid white 2px;
+    
+    font-family: 'Poppins';
+    font-weight: 600;
+
+    
+    background-color: var(--color4--);
+
+    color: var(--color1--);
+    
+}
+.minibox a{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    height: 5rem;
+    margin: 0;
+    margin-top: 1rem;
+
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+  
+    text-align: center;
+  
+    color: var(--color1--);
+   
+}
+
+.contenedor{
+    text-align: center;
+  }
+  /* Animación para el texto */
+  @keyframes fadeInOut {
+    0%, 100% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+  }
+  
+
+  
 .our{
-    font-size: 5.2rem;
+    font-size: 500%;
     font-weight: 800;
     text-align: center;
     margin-top: 5rem;
@@ -115,7 +169,7 @@ header{
     /*font-family: 'Braah One', sans-serif;*/
     color: var(--color4--) ;
     /*color: var(--color4--);*/
-
+    animation: fadeInOut 3s infinite; /* Repetir la animación infinitamente */
 }
 .menu a{
     text-decoration: none;
@@ -128,3 +182,5 @@ header{
 .filtro{
     display: none;
 }
+
+
