--- a/css/detalles.css
+++ b/css/detalles.css
@@ -59,6 +59,9 @@
     align-items:start;
     text-align:start;
 }
+.articuloC1 h3{
+  font-size: 1.6rem;
+}
 
 .articuloC2{
     height: auto;
@@ -166,6 +169,40 @@
   }
   
 
+  .mensaje-emergente {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 9999;
+  }
+
+  /* Estilo para la burbuja del acumulado */
+.burbuja {
+  position: absolute;
+  top: 9%;
+  right: 87%;
+  width: 3rem;
+  height: 3rem;
+  background-color: red;
+  color: white;
+  font-size: 1.6rem;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.quitar{
+  display: none;
+}
+
 @media only screen and (min-width:579px){
     .detalles {
         justify-content: space-around;
@@ -179,12 +216,17 @@
 
 }
 
-@media only screen and (min-width:1366px){
+@media only screen and (min-width:1150px){
 
-
+  .articulos{
+    width: 60rem;
+    display: flex;
+    
+  }
+  .seleccionar{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
-
-
-  
-
- 
