--- a/css/galeria.css
+++ b/css/galeria.css
@@ -36,5 +36,148 @@
 .NOC{
   display: none;
 }
+.carrito{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.producto{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+
+  border-radius: 2rem;
+  margin-top: 3rem;
+
+  height: 16rem;
+  width: 90%;
+
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.5rem;
+
+  box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -webkit-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -moz-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+
+}
+.producto button{
+  height: 3rem;
+  width: auto;
+
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-decoration:none;
+  border-style: none;
+
+  font-family: 'Poppins', sans-serif;
+  font-size:1rem;
+  font-weight:bold;
+
+  padding:1.5rem 1rem 1.5rem 1rem;
+  color:#ffffff;
+  background-color:#6c28fe;
+
+  border-radius:1rem;  
+  box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -webkit-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -moz-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  transition:all 0.3s;
+}
+.producto button:hover{
+  color: var(--color4--);
+  background-color: #ffffff;
+}
+.producto img{
+  height: 10rem;
+}
+.carritotexto{
+  width: 45%;
+}
+.producto p{
+  font-weight: bold;
+  color: var(--color4--);
+}
+.carrito{
+  font-family: 'Poppins', sans-serif;
+  
+}
+.carrito button{
+  height: 3rem;
+  width: auto;
 
 
+  margin-top: 1rem;
+
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-decoration:none;
+  border-style: none;
+
+
+  font-family: 'Poppins', sans-serif;
+  font-size:1rem;
+  font-weight:bold;
+
+  padding:1.5rem 1rem 1.5rem 1rem;
+  color:#ffffff;
+  background-color:#6c28fe;
+
+  border-radius:1rem;  
+  box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -webkit-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -moz-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  transition:all 0.3s;
+}
+.total{
+  font-size: 1.7rem;
+  margin-top: 1.5rem;
+  color: var(--color4--);
+  font-weight: bolder;
+}
+
+.ventana-emergente{
+  font-family: 'Poppins', sans-serif;
+  height: 80vh;
+  overflow-y: auto;
+}
+.ventana-emergente label{
+  font-weight: bold;
+}
+.ventana-emergente input{
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+}
+.ventana-emergente select{
+  font-family: 'Poppins', sans-serif;
+}
+.ventana-emergente button{
+  height: 2.3rem;
+  width: auto;
+
+
+  margin-top: 1.1rem;
+
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-decoration:none;
+  border-style: none;
+
+
+  font-family: 'Poppins', sans-serif;
+  font-size:1rem;
+  font-weight:bold;
+
+  padding:1.5rem 1rem 1.5rem 1rem;
+  color:#ffffff;
+  background-color:#6c28fe;
+
+  border-radius:1rem;  
+  box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -webkit-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  -moz-box-shadow: 0px 2px 5px 10px rgba(235,227,241,1);
+  transition:all 0.3s;
+}
